frontend/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongo-frontend
  template:
    metadata:
      labels:
        app: mongo-frontend
    spec:
      containers:
      - name: mongo-frontend
        image: 866934333672.dkr.ecr.us-east-2.amazonaws.com/react-mongo:latest
        ports:
          - containerPort: 80
