frontend/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-frontend-service
  namespace: frontend
spec:
  selector:
    app: mongo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
