frontend/front-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Correct placement
  rules:
  - host: rakanprojects.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-frontend-service
            namespace: frontend
            port:
              number: 80
      - path: /items
        pathType: Prefix
        backend:
          service:
            name: mongo-backend-service
            namespace: backend
            port:
              number: 80
